--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,7 @@ categoria.nome=Nome
 
 pessoa.nome=Nome
 pessoa.ativo=Ativo
+pessoa.inativa=Pessoa inativa para incluir no lan\u00E7amento.
 
 lancamento.descricao=Descri\u00E7\u00E3o
 lancamento.dataVencimento=Data de vencimento
